--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1> </h1>
-                <p class="lead"> Hello ! Is it me you're looking for? My portfolio site is under construction as we speak. Don't be a stranger come back and check it out soon.</p>
+                <p class="lead"> Hello ! Is it me you're looking for? </p>
+                <p> My portfolio site is under construction as we speak. </p>
+                <p> Don't be a stranger come back and check it out soon. </p>
                 <ul class="list-unstyled">
                     <li>Bootstrap v3.3.1</li>
                     <li>jQuery v1.11.1</li>
