--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h1> </h1>
                 <p class="lead"> Hello ! Is it me you're looking for? </p>
                 <p> My portfolio site is under construction as we speak. </p>
-                <p> Don't be a stranger come back and check it out soon. </p>
+                <p> Don't be a stranger and come back check it out soon. </p>
                 <ul class="list-unstyled">
                     <li></li>
                     <li></li>
