--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> Welcome to breadcrumbz.github.io </title>
+    <title> Breadcrumbz </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -72,6 +72,7 @@
             <div class="col-lg-12 text-center">
                 <h1> </h1>
                 <p class="lead"> Hello ! Is it me you're looking for? </p>
+                <p class="lead"> Welcome to breadcrumbz.github.io </p> </p>
                 <p> My portfolio site is under construction as we speak. </p>
                 <p> Don't be a stranger. Come back check it out again soon. </p>
                 <ul class="list-unstyled">
