--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 <p class="lead"> Hello ! Is it me you're looking for? </p>
                 <p class="lead"> Welcome to breadcrumbz.github.io </p> </p>
                 <p> My portfolio site is under construction as we speak. </p>
-                <p> Don't be a stranger. Come back check it out again soon. </p>
+                <p> Don't be a stranger. </p>
+                <p>Come back check it out again soon. </p>
                 <ul class="list-unstyled">
                     <li></li>
                     <li></li>
