--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p class="lead"> Welcome to breadcrumbz.github.io </p> </p>
                 <p> My portfolio site is under construction as we speak. </p>
                 <p> Don't be a stranger. </p>
-                <p>Come back check it out again soon. </p>
+                <p>Come back and check it out again soon. </p>
                 <ul class="list-unstyled">
                     <li></li>
                     <li></li>
