--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                 <p> My portfolio site is under construction as we speak. </p>
                 <p> Don't be a stranger. </p>
                 <p>Come back and check it out again soon. </p>
+                
+                <p>Well actually....you can check it out <a href=url ("https://pixelreel.wordpress.com/")>here.</a></p>
                 <ul class="list-unstyled">
                     <li></li>
                     <li></li>
