--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <p> Don't be a stranger. </p>
                 <p>Come back and check it out again soon. </p>
                 
-                <p>Well actually....you can check it out <a href=url("https://pixelreel.wordpress.com/")>here.</a></p>
+                <p>Well actually....you can check it out <a href="https://pixelreel.wordpress.com/">here.</a></p>
                 <ul class="list-unstyled">
                     <li></li>
                     <li></li>
